implmented /answers
